Fixed header in hero on mobile.

--- a/source/stylesheets/base/_typography.scss
+++ b/source/stylesheets/base/_typography.scss
@@ -2,7 +2,7 @@ h1 {
   margin: 0 0 2rem;
   color: $base-font-color;
   font-family: $header-font;
-  font-size: 4rem;
+  font-size: 3.9rem;
   font-weight: 800;
   line-height: 5.8rem;
   letter-spacing: -0.01em;
